# galaxy-visualizer

./: .gitignore  Cargo.toml  Makefile
galaxy/: test_galaxy.txt
src/: app.rs  comms.rs  helpers.rs  main.rs  main2.rs  models.rs  update_handler.rs
src/state/: animation_state.rs  explorer_state.rs  galaxy_state.rs  mod.rs  startup_state.rs  timers.rs  ui_state.rs
src/ui/: animations.rs  canvas.rs  explorer_bag.rs  menus.rs  mod.rs  popups.rs  startup_menu.rs  top_panel.rs
