[package]
name = "gui_serena"
version = "0.1.0"
edition = "2024"

[dependencies]
common-game = "3.0.0"
crossbeam-channel = "0.5.15"
eframe = "0.33.3"
egui = "0.33.3"
#orchestrator = { git = "https://github.com/ImmutableCosmicBorrow/orchestrator/"}
common-explorer = { git = "https://github.com/ImmutableCosmicBorrow/common-explorer/"}
log = "0.4"
env_logger = "0.11"

#[patch."https://github.com/ImmutableCosmicBorrow/orchestrator/"]
orchestrator = { path = "../orchestrator" }


